modified home page

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <div class="info-box">
       <img src="img/info_box1.webp" alt="">
       <div class="text-content">
-        <h4>IMPROVE CLARITY AND SECURITY</h4>
-        <h6>An economical option for communicating in the workplace, providing secure connection at all times</h6>
+        <h3>IMPROVE CLARITY AND SECURITY</h3>
+        <h4>An economical option for communicating in the workplace, providing secure connection at all times</h4>
       </div>
     </div>
 
     <div class="info-box">
       <div class="text-content">
-        <h4>STAY CONNECTED</h4>
-        <h6>Keep your business connected with durable, secure, and light solutions. We help you improve productivity and efficiency</h6>
+        <h3>STAY CONNECTED</h3>
+        <h4>Keep your business connected with durable, secure, and light solutions. We help you improve productivity and efficiency</h4>
       </div>
       <img src="img/info_box2.webp" alt="">
       
@@ -59,12 +59,13 @@
 
   </section>
 
-  <section id="product1" class="section-p1">
+  <!-- <section id="product1" class="section-p1">
     <h2>OUR PRODUCTS</h2>
     <div class="pro-container">
       <div class="pro"></div>
     </div>
-  </section>
+  </section> -->
+
 <body>
   
 </body>
