--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,30 @@
       </ul>
     </div>
   </section>
+
   
+
 <div class="container">
-    <form action="action_page.php">
+
+    <section id="contact" class="section-p1">
+       <h4>We would love to hear from you.</h4>  
+
+      <span>Contact us at: </span>
+      <span>Phone:     </span>
+      <span>Email: sales@prostarbatteries.com</span>
+    </section>
+   
+
+    <!-- <form action="action_page.php">
   
       <label for="fname">First Name</label>
       <input type="text" id="fname" name="firstname" placeholder="Your name..">
   
       <label for="lname">Last Name</label>
       <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-  
+      <label for="email">Email</label>
+      <input type="text" id="email" name="email" placeholder="Your email..">
+
       <label for="country">Country</label>
       <select id="country" name="country">
         <option value="australia">Australia</option>
@@ -33,7 +47,7 @@
       <label for="subject">Subject</label>
       <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
   
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit"> -->
   
     </form>
   </div>
