--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
   </section>
 
   <section id="hero">
-    <h1>All Accessories for</h1>
-    <h1>Two-Way Radios</h1>
-    <button>Shop Now</button>
+    <h1>Elevate Your Connectivity:</h1>
+    <h1>Explore Two-Way Radio Accessories</h1>
+    <button><a href="products.html">Shop Now</a></button>
   </section>
 
   <section id="info" class="section-p1">
-    <h2>OUR COMMITMENTS TO YOU</h2>
+    <!-- <h2>OUR COMMITMENTS TO YOU</h2> -->
 
     <div class="info-box">
       <img src="img/info_box1.webp" alt="">
       <div class="text-content">
-        <h3>IMPROVE CLARITY AND SECURITY</h3>
+        <h3>Improve Clarity and Security</h3>
         <h4>An economical option for communicating in the workplace, providing secure connection at all times</h4>
       </div>
     </div>
 
     <div class="info-box">
       <div class="text-content">
-        <h3>STAY CONNECTED</h3>
+        <h3>Stay Connected</h3>
         <h4>Keep your business connected with durable, secure, and light solutions. We help you improve productivity and efficiency</h4>
       </div>
       <img src="img/info_box2.webp" alt="">
@@ -52,7 +52,7 @@
     <div class="info-box">
       <img src="img/info_box3.webp" alt="">
       <div class="text-content">
-        <h3>WE ARE ALWAYS INNOVATING</h3>
+        <h3>We are Always Innovating</h3>
         <h4>Our promise is to provide our clients with high-quality products at competitive prices</h4>
       </div>
     </div>
