--- a/products.html
+++ b/products.html
@@ -14,3 +14,75 @@
     </div>
   </section>
   
+  <section id="product1" class="section-p1">
+    <h2>Featured Products</h2>
+    <div class="pro-container">
+
+      <div class="pro">
+        <img src="img/10.png" alt="">
+        <div class="des">
+          <span>Battery Eliminators</span>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/11.png" alt="">
+        <div class="des">
+          <span>Antennas</span>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/12.png" alt="">
+        <div class="des">
+          <span>Chargers</span>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/13.png" alt="">
+        <div class="des">
+          <span>Batteries</span>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/14.png" alt="">
+        <div class="des">
+          <span>Cables</span>
+        </div>
+      </div>
+
+    <div class="pro">
+      <img src="img/6.jpg" alt="">
+      <div class="des">
+        <span>Microphones</span>
+      </div>
+    </div>
+
+    <div class="pro">
+      <img src="img/7.png" alt="">
+      <div class="des">
+        <span>Belt Clips</span>
+      </div>
+    </div>
+
+    <div class="pro">
+      <img src="img/8.png" alt="">
+      <div class="des">
+        <span>Accessories</span>
+      </div>
+    </div>
+
+    <div class="pro">
+      <img src="img/9.jpg" alt="">
+      <div class="des">
+        <span>Housing Cases</span>
+      </div>
+    </div>
+
+    </div>
+
+
+    </div>
+  </section>
