added contact information

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
        <h4>We would love to hear from you.</h4>  
 
       <span>Contact us at: </span>
-      <span>Phone:     </span>
+      <span>Phone: +1 (305) 392- 5015 </span>
       <span>Email: sales@prostarbatteries.com</span>
     </section>
    
